# switchtec-user

./: .gitignore  .travis.yml  CONTRIBUTING.md  Makefile  Makefile.in  README.md  VERSION-GEN  annotated.html  bind_8h_source.html  classes.html  config.h.in  configure  configure.ac  crc_8c_source.html  crc_8h_source.html  cross  cross.mingw  customdoxygen.css  dir_000002_000000.html  dir_000003_000000.html  dir_2c3e26c67e8926144e9dab970917e9f6.html  dir_2c3e26c67e8926144e9dab970917e9f6_dep.map  dir_2c3e26c67e8926144e9dab970917e9f6_dep.md5  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.map  dir_97aefd0d527b934f1d99a682da8fe6a9_dep.md5  dir_bfccd401955b95cf8c75461437045ac0.html  dir_dfd218ccc229cddeb5649977d36ef894.html  doxy-boot.js  endian_8h_source.html  errors_8h_source.html  events_8c.html  events_8c__incl.map  events_8c__incl.md5  events_8c_source.html  files.html  functions.html  functions_vars.html  fw_8c.html  fw_8c__incl.map  (+251 more)
.github/workflows/: ci.yml  nnf-rpm.yml  rpm_build.yml
cli/: argconfig.c  argconfig.h  builtin.h  cap.c  cli.rc  cmd.h  cmd_handler.h  commands.c  common.h  define_cmd.h  diag.c  fabric.c  gas.c  gas.h  graph.c  graph.h  gui.c  gui.h  main.c  mfg.c  plugin.c  plugin.h  progress.c  progress.h  recovery.c  suffix.c
completions/: bash-switchtec-completion.sh
doc/: Doxyfile  Makefile  index.md  publish  style.css
examples/: Makefile  README.md  temp.c  temp.sh  temp_lib.py  temp_linux.py
inc/linux/: switchtec_ioctl.h
inc/switchtec/: arbitration.h  bind.h  cap.h  diag.h  endian.h  errors.h  fabric.h  gas.h  gas_mrpc.h  inject.h  log.h  mfg.h  mrpc.h  pci.h  pmon.h  portable.h  recovery.h  registers.h  switchtec.h  utils.h
inc/windows/: switchtec_public.h  version.rc
lib/: arbitration.c  cap.c  crc.c  crc.h  crc32.c  crc32.h  crc8.c  crc8.h  diag.c  events.c  fabric.c  fw.c  fw_common.h  gas_mrpc.c  gen_ops.c  gen_ops.h  lib.rc  linux.c  mfg.c  mfg_common.h  mrpc.c  pmon.c  recovery.c  switchtec.c  switchtec_priv.h
lib/gen3/: diag_gen3.c  diag_gen3.h  fw_gen3.c  fw_gen3.h
lib/gen4/: diag_gen4.c  diag_gen4.h  fw_gen4.c  fw_gen4.h  mfg_gen4.c  mfg_gen4.h
lib/gen5/: diag_gen5.c  diag_gen5.h  fw_gen5.c  fw_gen5.h  (+2 more)
search/: all_0.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  files_0.js  (+31 more)
(+15 files in other folders)
